--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,6 +12,7 @@ uuid = {version = "1.3.0", features = ["v7"]}
 logger = {git = "https://github.com/P40b0s/logger.git", branch = "main"}
 utilites = {git = "https://github.com/P40b0s/help_utilites.git", package = "utilites"}
 anyhow = "1.0.79"
+once_cell="1.19.0"
 [dev-dependencies]
 tokio= {version = "1.37.0", features = ["macros", "rt", "rt-multi-thread"] }
 tokio-test= {version ="0.4.4"}
